tests/scan/fixtures/validation/negative/clean_rubygems_clean_auth_gem/clean_auth_gem.gemspec
Gem::Specification.new do |s|
  s.name = "clean_auth_gem"
  s.version = "0.1.0"
  s.summary = "A clean Ruby gem: clean_auth_gem"
  s.authors = ["Example Author"]
end
